--- a/bilal2.html
+++ b/bilal2.html
@@ -55,15 +55,15 @@
 
     <div class="kue-list">
         <div class="kue-item">
-            <img src="aneka kue/kue lumpur.jpeg" alt="kue lumpur">
+            <img src="kue lumpur.jpeg" alt="kue lumpur">
             <h3>kue lumpur</h3>
         </div>
         <div class="kue-item">
-            <img src="aneka kue/kue pancong lumer.jpeg" alt="kue pancong lumer">
+            <img src="kue pancong lumer.jpeg" alt="kue pancong lumer">
             <h3>kue pancong lumer</h3>
         </div>
         <div class="kue-item">
-            <img src="aneka kue/donat.jpeg" alt="donat">
+            <img src="donat.jpeg" alt="donat">
             <h3>donat</h3>
         </div>
     </div>
